2010-01-23  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)

	* filelock.c: Include utmp.h only when HAVE_UTMP_H (FreeBSD 9.x
	lacks this header file).

2010-01-23  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (draw_glyphs): Update `start' for left_overwritten case
	as in Emacs 22.

2010-01-22  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* lisp.h (make_pure_string): String pointer arg now points to const.

	* alloc.c (find_string_data_in_pure, make_pure_string): String pointer
	args now point to const.

2010-01-22  Eli Zaretskii  <eliz@gnu.org>

	* lread.c (Fload): Don't treat files without .elc extension as
	byte-compiled if they are ``magic'', i.e. `openp' returned -2 for
	them.  (bug#5303)

2010-01-20  Kenichi Handa  <handa@m17n.org>

	* coding.c (consume_chars): If ! multibyte and the encoder is ccl,
	treat the source as actual byte sequence.

2010-01-19  Alan Mackenzie  <acm@muc.de>

	Fix spurious before-change-functions invocation from (insert ?\n).
	* textprop.c (set_text_properties): rename parameter
	`signal_after_change_p' to `coherent_change_p', and make the
	invocation of `modify_region' conditional on it.

2010-01-19  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (apply_xft_settings): Save settings in Vxft_settings
	for debug purpose.
	(syms_of_xsettings): Declare xft-settings.

2010-01-18  Chong Yidong  <cyd@stupidchicken.com>

	* editfns.c (Fcurrent_time_string): Doc fix (Bug#5408).

2010-01-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xterm.c (event_handler_gdk): Block input (Bug#5037).

2010-01-16  Chong Yidong  <cyd@stupidchicken.com>

	* emacs.c (standard_args): Adjust arg priorities to reflect how
	they are processed in startup.el.

2010-01-16  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (lisp, shortlisp): Update.

2010-01-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xterm.c (x_term_init): Instead of inhibiting GC while running Lisp