@@ -1,3 +1,8 @@
+2010-01-24  Eric Bélanger  <snowmaniscool@gmail.com>  (tiny change)
+
+	* image.c (png_load): Use png_sig_cmp instead of the obsolete
+	png_check_sig, which has been removed in libpng 1.4.
+
 2010-01-23  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)
 
 	* filelock.c: Include utmp.h only when HAVE_UTMP_H (FreeBSD 9.x
